**  denotes quite substantial/important changes
*** denotes really big changes 

ISSUES:

* gamm indexing errors with correlation structures - see 
  gamm-bugs/index-errors

* see email from gavin simpson 10/04/13 "fs" class messes up summary.gam
  - run example at end of fs help and then summary(bm$gam). 

* If smooth p-values used the R trick used for random effect testing 
  then could model frame's use within predict be replaced with something 
  less memory intensive. 

* bam - allow a blocking covariate for AR1? ARp?

* warn about, or at least report, rank deficiency?

* vis.gam --- set "re" terms to zero by default?? (clearly better - easy?)

* let t2's expand by penalty in summary/anova/plot and predict??

* convergence failure *windows only* with mack example - see Freiburg
  course. (sos smooth has high condition number)

* gam.check is using qq.gam on gamm models with random effects and cor struct
  - can't be right - need a warning.

* initial.sp failure reported in weird situation: 
  see mgcv-related/bugs/initial.sp

* users can use as.factor(a) in formula, and variable.summary won't know 
  about it - causes a problem if a is character, for example. Could coerce
  character to factor, but is that general enough? what about if a was numeric
  then summary doesn't reflect how it's used?  

* F needed in gam object?

1.7-23

** 'ti' smooth spefification introduced, which provides a much better (and 
  very simple) way of allowing nested models based on 'te' type tensor 
  product smooths. 'ti' terms are used to set up smooth interactions 
  excluding main effects (so ti(x,z) is like x:z while te(x,z) is more
  like x*z, although the analogy is not exact). 

* gamm could fail with fixed smooths while assembling total 
  penalty matrix, by attempting to access non-existent penalty 
  matrix. (Thanks Ainars Aunins for reporting this.)

* stripped rownames from model matrix, eta, linear predictor etc. Saves
  memory and time.
